--- a/.github/workflows/browser-dev.yml
+++ b/.github/workflows/browser-dev.yml
@@ -32,7 +32,7 @@ jobs:
         sudo snap alias ffmpeg.ffprobe ffprobe
         python -m pip install --upgrade --user pip
         python -m pip install --upgrade --user setuptools
-        python -m pip install --user pyssim
+        python -m pip install --user pyssim OpenCV-Python Numpy
         python -m pip --version
         python -m pip show Pillow
         python -m pip show pyssim
