--- a/.github/workflows/safari.yml
+++ b/.github/workflows/safari.yml
@@ -26,7 +26,7 @@ jobs:
         brew install ffmpeg imagemagick
         python -m pip install --upgrade --user pip
         python -m pip install --upgrade --user setuptools
-        python -m pip install --user pyssim
+        python -m pip install --user pyssim OpenCV-Python Numpy
         python -m pip --version
         python -m pip show Pillow
         python -m pip show pyssim
